start swagger client
