# product-api/swagger.yaml
@@ -85,6 +85,41 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+  /products/{id}:
+    delete:
+      description: Returns a list of products from the data base
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContent'
+      tags:
+      - products
+    get:
+      description: Returns the product with a given id
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
     put:
       description: Update a products details
       operationId: updateProduct
@@ -103,23 +138,6 @@ paths:
           $ref: '#/responses/errorResponse'
         "422":
           $ref: '#/responses/errorValidation'
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      description: Returns a list of products from the data base
-      operationId: deleteProduct
-      parameters:
-      - description: The id of the product to delete from the database
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
-      responses:
-        "201":
-          $ref: '#/responses/noContent'
       tags:
       - products
 produces:
